# bit-axon

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  NOTICE  README.md  SECURITY.md  SUPPORT.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: CODEOWNERS  FUNDING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: 01-bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: cd.yml  ci.yml  codeql.yml  docs.yml  labeler.yml  publish.yml  release-drafter.yml  stale.yml
BitAxonApp/: Package.resolved  Package.swift
BitAxonApp/BitAxonApp/: BitAxonApp.swift  ContentView.swift
BitAxonApp/BitAxonApp/Models/: BitAxonConfig.swift  BitAxonKVCache.swift  BitAxonModel.swift
BitAxonApp/BitAxonApp/Services/: BitAxonRegistry.swift  FineTuneBridge.swift  ModelService.swift
BitAxonApp/BitAxonApp/ViewModels/: ChatViewModel.swift  DeviceStat.swift
BitAxonApp/BitAxonApp/Views/: ChatView.swift  FineTuneView.swift  MessageRow.swift  MetricsView.swift  PromptInputView.swift
BitAxonApp/Tests/EquivalenceTests/: EquivalenceTests.swift
api/: index.html
api/config/: index.html
api/evaluation/: index.html
api/inference/: index.html
api/layers/: index.html
api/model/: index.html
api/porting/: index.html
api/profiling/: index.html
api/quantization/: index.html
api/tokenizer/: index.html
api/training/: index.html
api/utils/: index.html
architecture/: index.html
architecture/axon-ssm/: index.html
architecture/memory-budget/: index.html
architecture/swa-moe/: index.html
changelog/: index.html
cli/reference/: index.html
contributing/: index.html
docs/: changelog.ko.md  changelog.md  contributing.ko.md  contributing.md  faq.ko.md  faq.md  index.ko.md  index.md
docs/api/: config.md  evaluation.md  index.md  inference.md  layers.md  model.md  porting.md  profiling.md  quantization.md  tokenizer.md  training.md  utils.md
docs/architecture/: axon-ssm.ko.md  axon-ssm.md  index.ko.md  index.md  memory-budget.ko.md  memory-budget.md  swa-moe.ko.md  swa-moe.md
docs/cli/: reference.ko.md  reference.md
docs/getting-started/: index.ko.md  index.md  installation.ko.md  installation.md  quickstart.ko.md  quickstart.md
docs/guides/: benchmarking.ko.md  benchmarking.md  inference.ko.md  inference.md  porting.ko.md  porting.md  quantization.ko.md  quantization.md  training.ko.md  training.md
docs/macos-app/: index.ko.md  index.md
docs/overrides/: main.html
docs/papers/: axon-ssm.ko.md  axon-ssm.md  index.ko.md  index.md  sandwich-architecture.ko.md  sandwich-architecture.md  thermal-training.ko.md  thermal-training.md  turboquant.ko.md  turboquant.md
docs/plans/: 001.sllm.md  sllm-8gb-plan.en.md  sllm-8gb-plan.ko.md
faq/: index.html
getting-started/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/benchmarking/: index.html
guides/inference/: index.html
guides/porting/: index.html
guides/quantization/: index.html
guides/training/: index.html
ko/: index.html
ko/api/: index.html
ko/api/config/: index.html
ko/api/evaluation/: index.html
ko/api/inference/: index.html
ko/api/layers/: index.html
ko/api/model/: index.html
ko/api/porting/: index.html
ko/api/profiling/: index.html
ko/api/quantization/: index.html
ko/api/tokenizer/: index.html
ko/api/training/: index.html
ko/api/utils/: index.html
ko/architecture/: index.html
ko/architecture/axon-ssm/: index.html
ko/architecture/swa-moe/: index.html
ko/changelog/: index.html
ko/contributing/: index.html
ko/faq/: index.html
ko/getting-started/: index.html
ko/macos-app/: index.html
ko/papers/: index.html
macos-app/: index.html
papers/: index.html
papers/axon-ssm/: index.html
papers/sandwich-architecture/: index.html
papers/thermal-training/: index.html
papers/turboquant/: index.html
scripts/: benchmark.py  eval_qwen_baseline.py  evaluate_ppl.py  pipeline_all.sh  port_weights.py  train.py
search/: search_index.json
src/bit_axon/: __init__.py  config.py  model.py  tokenizer.py
stylesheets/: extra.css
tests/: conftest.py  test_compile.py  test_config.py  test_model.py  test_public_api.py
tests/cli/: __init__.py  test_benchmark.py  test_datasets.py  test_download.py  test_evaluate.py  test_integration.py  test_merge.py  test_pipeline.py  test_port_weights.py  test_prepare.py  test_quantize.py  test_run.py  test_train.py
tests/evaluation/: test_benchmark.py  test_dataset.py  test_perplexity.py  test_tasks.py
tests/inference/: test_generate.py  test_loader.py  test_sampling.py
tests/layers/: test_axon_ssm.py  test_moe.py  test_swa.py
tests/porting/: test_mapper.py  test_pipeline.py  test_validation.py  test_visualization.py  test_vocab_map.py  test_weight_map.py
tests/profiling/: test_memory.py  test_speed.py  test_thermal.py
tests/quantization/: test_nf4.py
tests/training/: conftest.py  test_checkpoint.py  test_collate.py  test_config.py  test_cooling.py  test_data.py  test_data_pipeline.py  test_lora_dora.py  test_loss.py  test_merging.py  test_orpo_collate.py  test_orpo_loss.py  test_orpo_trainer.py  test_packing.py  test_scheduler.py  test_thermal_integration.py  test_tokenizer.py  test_trainer.py  test_training_integration.py
(+87 files in other folders)
