[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bit-axon"
version = "0.1.0"
description = "Bit-Axon 3B: Minimal Bits, Maximal Impulse — sLLM engine for Apple Silicon"
requires-python = ">=3.10"
dependencies = [
    "mlx>=0.31.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-xdist"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
