[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bit-axon"
version = "0.1.0"
description = "Bit-Axon 3B: Minimal Bits, Maximal Impulse — sLLM engine for Apple Silicon"
requires-python = ">=3.10"
dependencies = ["mlx>=0.31.0", "numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-xdist"]
training = ["tokenizers>=0.13", "huggingface_hub>=0.16"]
porting = ["huggingface_hub>=0.16", "tokenizers>=0.13"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 160

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
  "C4",  # flake8-comprehensions
  "DTZ", # flake8-datetimez
  "RUF", # ruff-specific rules
]
ignore = [
  "E501",   # line too long (handled by formatter)
  "B008",   # do not perform function calls in argument defaults (common in MLX)
  "B009",   # getattr with constant attribute (used in dynamic layer access)
  "N802",   # function name should be lowercase (MLX uses __call__, etc.)
  "N803",   # argument name should be lowercase (x, y, z are standard in ML)
  "N806",   # variable in function should be lowercase (B, D, E, K, L are ML conventions)
  "RUF059", # unpacked variable never used (common in shape unpacking: B, L, D = x.shape)
]

[tool.ruff.lint.isort]
known-first-party = ["bit_axon"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
