[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bit-axon"
version = "0.1.0"
description = "Bit-Axon 3B: Minimal Bits, Maximal Impulse — sLLM engine for Apple Silicon"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Artificial Intelligence :: Machine Learning",
  "Typing :: Typed",
]

dependencies = [
  "mlx>=0.31.0,<1",
  "numpy>=2.2.6,<3",
  "tokenizers>=0.13",
  "huggingface_hub>=0.16",
  "typer>=0.12.0",
  "rich>=14.3.4",
]

[project.scripts]
bit-axon = "bit_axon.cli.main:main"

[project.optional-dependencies]
dev = ["pre-commit>=4.1", "pytest>=9.0.3", "pytest-xdist>=3.0", "ruff>=0.9", "datasets>=2.14"]
training = []
porting = []
evaluation = ["datasets>=2.14"]
docs = [
    "mkdocs-material>=9.5",
    "mkdocs-static-i18n>=1.0",
    "mkdocstrings[python]>=1.0.3",
    "mkdocs-autorefs",
    "mkdocs-glightbox",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-minify-plugin",
]
all = ["bit-axon[dev,training,porting,evaluation,docs]"]

[project.urls]
Homepage = "https://github.com/skyoo2003/bit-axon"
Documentation = "https://skyoo2003.github.io/bit-axon/"
Repository = "https://github.com/skyoo2003/bit-axon"
Issues = "https://github.com/skyoo2003/bit-axon/issues"
Discussions = "https://github.com/skyoo2003/bit-axon/discussions"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 160

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
  "C4",  # flake8-comprehensions
  "DTZ", # flake8-datetimez
  "RUF", # ruff-specific rules
]
ignore = [
  "E501",   # line too long (handled by formatter)
  "B008",   # do not perform function calls in argument defaults (common in MLX)
  "B009",   # getattr with constant attribute (used in dynamic layer access)
  "N802",   # function name should be lowercase (MLX uses __call__, etc.)
  "N803",   # argument name should be lowercase (x, y, z are standard in ML)
  "N806",   # variable in function should be lowercase (B, D, E, K, L are ML conventions)
  "RUF059", # unpacked variable never used (common in shape unpacking: B, L, D = x.shape)
  "SIM108", # if-else-block can be replaced with ternary (less readable for multi-line configs)
]

[tool.ruff.lint.isort]
known-first-party = ["bit_axon"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
